# TRS-IO

./: .gitignore  .gitmodules  Makefile  README.md
3d/: pcb_case.stl
doc/: README.md  TRS-IO-M1-XRAY-labels.odg  TRS-IO-M1-labels.odg  TRS-IO-M1-v1_3-labels.odg  TRS-IO-M3-v2_2-labels.odg  TRS-IO-MIII-labels.odg  TRS-IO-PP-v1_1-labels.odg  TRS-IO-PP.odg  TRS-IO-PP.readme  build.md  rs_fix.md  rsc-architecture.odg  rsc.odg  tcp_ip.md  trs-io-architecture.odg
examples/plotter/: README.md  curves.bas
examples/trs-fs/: CAT.BAS
examples/trs-nic/: WHOIS.BAS
fritzing/: RetroStore.fzz
fritzing/RetroStore_gerber/: RetroStore_contour.gm1  RetroStore_copperBottom.gbl  RetroStore_copperTop.gtl  RetroStore_drill.txt  RetroStore_maskBottom.gbs  RetroStore_maskTop.gts  RetroStore_pnp.txt  RetroStore_silkBottom.gbo  RetroStore_silkTop.gto
gal/: README.md  RetroStore.jed  RetroStore.pld  TRS-IO.jed  TRS-IO.pld  TRS-IO_noFreHD.jed  TRS-IO_noFreHD.pld
gal/m1/: TRS-IO-M1-U8.jed  TRS-IO-M1-U9.jed  TRS-IO-M1-U9.pld
gal/m1/v1/: TRS-IO-M1-U8.jed
gal/m1/v1.1/: .gitignore  TRS-IO-M1-U8.pld  TRS-IO-M1-U9.jed  TRS-IO-M1-U9.pld
gal/m1/v1.2/: TRS-IO-M1-U8.pld  TRS-IO-M1-U9.jed
gal/m1/v1.2-xray/: TRS-IO-M1-U8.jed  TRS-IO-M1-U9.jed  TRS-IO-M1-U9.pld
gal/m3/: TRS-IO.jed  TRS-IO.pld
kicad/: .gitignore  TRS-80-exp.lib  TRS-IO.kicad_pcb  TRS-IO.sch
kicad/m1/v1/: ATF16V8-PDIP-AP.lib  ATF22V10-PDIP-AP.lib  ESP-AP.lib  SRAM-PDIP-AP.lib  TRS-IO-M1-cache.lib  TRS-IO-M1.kicad_pcb  TRS-IO-M1.kicad_pcb-bak  TRS-IO-M1.net  TRS-IO-M1.pro  TRS-IO-M1.sch  TRS-IO-M1.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
kicad/m1/v1.1/: TRS-IO-M1-cache.lib  TRS-IO-M1.kicad_pcb  TRS-IO-M1.kicad_pcb-bak  TRS-IO-M1.net  TRS-IO-M1.pro  TRS-IO-M1.sch  TRS-IO-M1.sch-bak  fp-lib-table  sym-lib-table
kicad/m1/v1.2/: MYLIB.dcm  TRS-IO-M1-cache.lib  TRS-IO-M1.kicad_pcb  TRS-IO-M1.kicad_pcb-bak  TRS-IO-M1.net  TRS-IO-M1.sch  TRS-IO-M1.sch-bak  fp-info-cache  sym-lib-table
kicad/m1/v1.2-xray/: SRAM-PDIP-AP.lib  TRS-IO-M1.kicad_pcb  TRS-IO-M1.kicad_prl  TRS-IO-M1.kicad_pro  TRS-IO-M1.kicad_sch  TRS-IO-M1.net  TRS-IO-M1.pro  TRS-IO-M1.sch  fp-info-cache  sym-lib-table
kicad/m1/v1.3-xray/: .gitignore  ATF16V8-PDIP-AP.kicad_sym  MYLIB.kicad_sym  TRS-IO-M1.kicad_pcb  TRS-IO-M1.kicad_pcb-bak  TRS-IO-M1.kicad_prl  TRS-IO-M1.kicad_pro  TRS-IO-M1.kicad_sch  TRS-IO-M1.kicad_sch-bak  TRS-IO-M1.sch-bak  fp-info-cache
kicad/m1/v1.4/: ESP-AP.lib  TRS-IO-M1.kicad_pcb  TRS-IO-M1.kicad_sch
kicad/m3/v1.1/: TRSIO-B.Mask.gbr  TRSIO-cache.lib  (+9 more)
kicad/pmod/: CustomComponents.dcm
kicad/v1/: TRSIO-B.Cu.gbr  TRSIO-B.Mask.gbr  TRSIO-B.SilkS.gbr  TRSIO-Edge.Cuts.gbr  TRSIO-F.Cu.gbr  TRSIO-F.Mask.gbr  TRSIO-F.SilkS.gbr  TRSIO-NPTH.drl  TRSIO.drl  TRSIO.kicad_pcb-bak  TRSIO.net  TRSIO.pro
kicad/v1.1/: TRSIO-B.Cu.gbr  TRSIO-B.SilkS.gbr  TRSIO-Edge.Cuts.gbr  TRSIO-F.Cu.gbr  TRSIO-F.Mask.gbr  TRSIO-F.SilkS.gbr  TRSIO-NPTH.drl
src/: Makefile
src/boot/: .gitignore  Makefile  boot.asm  cosmic.cmd  defense.cmd
src/esp/: .cproject  .gitignore  .parcelrc  .project  CMakeLists.txt  Makefile  package-lock.json  package.json  partitions-pp.csv  partitions.csv  reset_to_factory.sh  sdkconfig  sdkconfig.defaults  sdkconfig.mini-trs  sdkconfig.trs-io  sdkconfig.trs-io-m1  sdkconfig.trs-io-m3  sdkconfig.trs-io-pp
src/esp/components/libsmb2/: CMakeLists.txt
src/esp/components/libsmb2/include/: portable-endian.h
src/esp/components/libsmb2/include/esp/: byteswap.h  endian.h
src/esp/components/libsmb2/lib/: sync.c
src/esp/components/retrostore/: .gitignore  ApiProtos.pb.c  CMakeLists.txt  backend.c  backend.cpp  boot.c  component.mk  esp_mock.c  esp_mock.cpp  loader_basic.cmd  retrostore.c  retrostore.cpp  rsclient.c  rsclient.cmd  utils.c  utils.cpp
src/esp/components/retrostore/include/: ApiProtos.pb.h  backend.h  defs.h  esp_mock.h  pb.h  retrostore-defs.h  retrostore.h  utils.h  version.h
src/esp/components/retrostore/proto/: ApiProtos.options  ApiProtos.proto
src/esp/components/trs-fs/: CMakeLists.txt  component.mk  fileio.cpp  posix.cpp  serial.cpp  smb.cpp  trs-fs.cpp
src/esp/components/trs-fs/include/: fileio.h  posix.h  serial.h  smb.h  trs-fs.h
src/esp/components/trs-io/: CMakeLists.txt  button.cpp  component.mk  core.cpp  debug.js  event.cpp  fs-roms.cpp  fs-spiffs.cpp  http.cpp  index.html  led.cpp  mongoose.cpp  ntp_sync.cpp  printer.cpp  printer.html  spiffs.cpp  timezones.cpp  trs-io.cpp  trs_xray.css  trs_xray.html  trs_xray.js  web_debugger.cpp  web_debugger.h  wifi.cpp
src/esp/components/trs-io/include/: event.h  fs-roms.h  fs-spiffs.h  http.h  ntp_sync.h  printer.h  spiffs.h  timezones.h  trs-io.h  version.h  web_debugger.h  wifi.h
src/esp/main/: ApiProtos.pb.c  ApiProtos.pb.h  CMakeLists.txt  Kconfig  button.c  button.cpp  button.h  component.mk  cosmic.c  event.cpp  io-m1.cpp  io-m3.cpp  io-xray.cpp  io.c  io.cpp  io.h  io_m1.cpp  led.cpp  led.h  main.c  main.cpp  ntp_sync.cpp  ntp_sync.h  ota-dummy.c  ota-dummy.cpp  ota.c  ota.cpp  ota.h  pb.h  retrostore.c  retrostore.h  rst.cpp  settings.cpp  spi-m1.cpp  spi-m3.cpp  spi-xray.cpp  spi.cpp  spi.h  storage.c  storage.cpp  (+4 more)
src/esp/main/include/: button.h  io.h  ntp_sync.h  ota.h  rst.h  settings.h  spi.h  storage.h  wifi.h  xray.h
src/esp/main/ulp/: io.S
src/fpga/: .gitignore  CmodA7_B.xdc  main.v  splash.coe  splash_le18.coe  trigger.v  trs80m1_chr.coe  trs80m3_chr.coe  vga.v
src/html/: printer_fonts.js  utils.js
src/ihex2cmd/: .gitignore  Makefile  ihex2cmd.cpp
src/loader/: Makefile
src/modules/: Makefile
src/server/: .gitignore  package-lock.json  package.json  server.mjs  server.py
src/trs/: .gitignore  Makefile  about.c  browse.c  browse.h  esp.c  esp.h  font.c  form.c  form.h  hardware.h  header.h  help.c  help.h  inout.c  inout.h  key.c  list.c  list.h  main.c  menu.c  menu.h  panic.h  retrostore.h  screen.c  screen.h  splash.c  splash.h  version.h  wifi.c  wifi.h  window.c  window.h
src/typescript/: main.ts  package-lock.json  package.json  tsconfig.json
src/z80/: Makefile  crt0.s  defs.h  main.c  splash.h  window.h
(+1157 files in other folders)
